# esp32c6-golioth-zephyr-starter

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Kconfig  README.md  generate-lfs-image.py  prj.conf  sample.yaml  west.yml
.github/docker/: Dockerfile
.github/workflows/: build_container.yml  build_zephyr.yml
boards/: esp32c6_devkitc_esp32c6_hpcore.overlay
docs/: esp32c6-4mb-flash-sysbuild.md
soc/espressif/esp32/: esp32c6_devkitc_esp32c6_hpcore.conf
src/: app_rpc.c  app_rpc.h  app_sensors.c  app_sensors.h  app_settings.c  app_settings.h  app_state.c  app_state.h  json_helper.h  main.c  main.h
sysbuild/: CMakeLists.txt  mcuboot.overlay
